--- a/app/src/main/res/layout/activity_user_detail.xml
+++ b/app/src/main/res/layout/activity_user_detail.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".usif.detail.UserDetailActivity">
+    tools:context=".usif.detail.UserDetailActivity"
+    android:id="@+id/detailLayout">
 
     <ImageView
         android:id="@+id/iv_profile"
@@ -20,7 +21,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/iv_profile"
@@ -34,10 +34,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        tools:text="TextView"
         app:layout_constraintEnd_toEndOf="@+id/tv_name"
         app:layout_constraintStart_toStartOf="@+id/tv_name"
-        app:layout_constraintTop_toBottomOf="@+id/tv_name" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_name"
+        tools:text="TextView" />
 
     <ProgressBar
         android:id="@+id/progressBar2"
@@ -69,9 +69,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:gravity="center_vertical"
-            android:textColor="@color/black"
             android:textSize="14sp"
-            app:drawableStartCompat="@drawable/baseline_people"
             tools:text="7 Followers" />
 
         <TextView
@@ -79,7 +77,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:textColor="@color/black"
             android:textSize="14sp"
             tools:text="7 Following" />
     </LinearLayout>
@@ -104,18 +101,33 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tab" />
 
+    <ImageView
+        android:id="@+id/bg_cirlce"
+        android:layout_width="63dp"
+        android:layout_height="74dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/baseline_circle" />
+
     <ToggleButton
         android:id="@+id/fav_toggle"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:textOn=""
-        android:textOff=""
+        android:layout_marginTop="16dp"
         android:background="@drawable/fav_toggle"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:onClick="rotateButton"
+        android:textOff=""
+        android:textOn=""
+        app:layout_constraintBottom_toBottomOf="@+id/bg_cirlce"
+        app:layout_constraintEnd_toEndOf="@+id/bg_cirlce"
+        app:layout_constraintHorizontal_bias="0.516"
+        app:layout_constraintStart_toStartOf="@+id/bg_cirlce"
+        app:layout_constraintTop_toTopOf="@+id/bg_cirlce"
+        app:layout_constraintVertical_bias="0.23"
+        tools:ignore="UsingOnClickInXml" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
