--- a/app/src/main/res/layout/list_user.xml
+++ b/app/src/main/res/layout/list_user.xml
@@ -19,9 +19,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:textSize="16dp"
-        tools:text="TextView"
+        android:textSize="18dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/user_pic"
         app:layout_constraintStart_toEndOf="@+id/user_pic"
-        app:layout_constraintTop_toTopOf="@+id/user_pic" />
+        app:layout_constraintTop_toTopOf="@+id/user_pic"
+        tools:text="TextView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
