--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -7,4 +7,14 @@
         android:title="@string/search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="collapseActionView|always" />
+    <item
+        android:id="@+id/favButton"
+        android:icon="@drawable/baseline_favorite"
+        android:title="@string/Fav_button"
+        app:showAsAction="collapseActionView|always"/>
+    <item
+        android:id="@+id/setting"
+        android:icon="@drawable/baseline_settings_24"
+        android:title="@string/setting"
+        app:showAsAction="collapseActionView|always"/>
 </menu>
